Final_Keyword_Test/TestFinalKeyword.java
//package Final_Keyword_Test;
//
////fianl class Test // fianl class
//class TestFinalKeyword
//
//{
//// public class final void someFunction() // fianl mathod
//{ }
//}
//class moreTestFinalKeyword extends TestFinalKeyword
//{
//    public void someFunction() //error
//    {}
//}
////public class Example2
//{
//    private final int x; //final instance member variable
//    private final static int y; // fianl static member variable
//    static
//    { y=4;}
//    Example2()
//    { x=5;}
//    public void fun()
//    {
////        fianl int k; // fianl local variable
//    }
//    public static void main(String[] args)
//    {
//        Example2 e1=new Example2();
//    }
//}